@@ -2,39 +2,51 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>PolicyCenter.Selenium</groupId>
+    <groupId>com.sura</groupId>
     <artifactId>BDDCore</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Sample Serenity project using JBehave and WebDriver</name>
+    <name>BDDCoreSura</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>1.1.26-rc.3</serenity.version>
-        <serenity.jbehave.version>1.1.0</serenity.jbehave.version>
+        <serenity.version>1.1.34</serenity.version>
+        <serenity.jbehave.version>1.12.0</serenity.jbehave.version>
+        <junit.version>4.12</junit.version>
+        <slf4j.simple.version>1.7.7</slf4j.simple.version>
+        <assertj.core.version>3.4.0</assertj.core.version>
+        <lambdaj.version>2.3.3</lambdaj.version>
+        <jbehave.core.version>4.0.5</jbehave.core.version>
+        <sikuli.api.version>1.2.0</sikuli.api.version>
+        <serenity.maven.plugin.version>1.1.9</serenity.maven.plugin.version>
+        <maven.surefire.plugin>2.19.1</maven.surefire.plugin>
+        <maven.failsafe.plugin>2.19.1</maven.failsafe.plugin>
+        <maven.compiler.plugin>3.2</maven.compiler.plugin>
+        <maven.compiler.plugin.source>1.7</maven.compiler.plugin.source>
+        <maven.compiler.plugin.target>1.7</maven.compiler.plugin.target>
         <webdriver.driver>chrome</webdriver.driver>
     </properties>
 
     <repositories>
-      <repository>
-        <snapshots>
-        <enabled>false</enabled>
-        </snapshots>
-        <id>central</id>
-        <name>bintray</name>
-        <url>http://jcenter.bintray.com</url>
-      </repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>bintray</name>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
     </repositories>
     <pluginRepositories>
-      <pluginRepository>
-        <snapshots>
-        <enabled>false</enabled>
-        </snapshots>
-        <id>central</id>
-        <name>bintray-plugins</name>
-        <url>http://jcenter.bintray.com</url>
-      </pluginRepository>
+        <pluginRepository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>bintray-plugins</name>
+            <url>http://jcenter.bintray.com</url>
+        </pluginRepository>
     </pluginRepositories>
 
     <dependencies>
@@ -52,38 +64,33 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.7</version>
+            <version>${slf4j.simple.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>1.7.0</version>
+            <version>${assertj.core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.lambdaj</groupId>
             <artifactId>lambdaj</artifactId>
-            <version>2.3.3</version>
+            <version>${lambdaj.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jbehave</groupId>
             <artifactId>jbehave-core</artifactId>
-            <version>3.10</version>
+            <version>${jbehave.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sikuli</groupId>
             <artifactId>sikuli-api</artifactId>
-            <version>1.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>RELEASE</version>
+            <version>${sikuli.api.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -91,21 +98,27 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>${maven.surefire.plugin}</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>${maven.failsafe.plugin}</version>
                 <configuration>
                     <includes>
-                        <!--<include>**/billing/*.java</include>-->
-                         <include>**/policycenter/*.java</include>
-                        <include>**/claims/*.java</include>
+                        <!--<include>**/claims/*.java</include>
+                        <include>**/billing/*.java</include>-->
+                        <include>**/policycenter/*.java</include>
                     </includes>
-                    <argLine>-Xmx1024m</argLine>
+                    <excludes>
+                        <exclude>**/policycenter/MainStories.java</exclude>
+                    </excludes>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <perCoreThreadCount>true</perCoreThreadCount>
+                    <!--<threadCount>2</threadCount>-->
+                    <forkCount>3</forkCount>
                     <systemPropertyVariables>
                         <webdriver.driver>${webdriver.driver}</webdriver.driver>
                     </systemPropertyVariables>
@@ -122,16 +135,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
+                <version>${maven.compiler.plugin}</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${maven.compiler.plugin.source}</source>
+                    <target>${maven.compiler.plugin.target}</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
                 <artifactId>serenity-maven-plugin</artifactId>
-                <version>${serenity.version}</version>
+                <version>${serenity.maven.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>serenity-reports</id>
